objects/Contact__c.object
<CustomObject><fields>
        <fullName>Email_Address__c</fullName>
        <description>Email address of the attendee</description>
        <inlineHelpText>Email address of the attendee</inlineHelpText>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Prequalified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prequalified?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Purchase_Date__c</fullName>
        <description>The date the attendee bought their tickets.</description>
        <inlineHelpText>The date the attendee bought their tickets.</inlineHelpText>
        <label>Purchase Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Purchase_Source__c</fullName>
        <description>We should be able to select from the following options: Box Office, Official Website, 3rd Party Vendor, and Facebook.</description>
        <inlineHelpText>We should be able to select from the following options: Box Office, Official Website, 3rd Party Vendor, and Facebook.</inlineHelpText>
        <label>Purchase Source</label>
        <picklist>
            <picklistValues>
                <fullName>Box Office, Official Website, 3rd Party Vendor, and Facebook</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Ticket_Type__c</fullName>
        <description>We should be able to select either VIP, or General Admission.</description>
        <inlineHelpText>We should be able to select either VIP, or General Admission.</inlineHelpText>
        <label>Ticket Type</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Admission</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Tickets_Purchased__c</fullName>
        <description>The number of tickets that each attendee purchases.</description>
        <inlineHelpText>The number of tickets that each attendee purchases.</inlineHelpText>
        <label>Tickets Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Contact</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Contact</label><nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Contacts</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>